--- a/osgi.enroute.pom.distro/pom.xml
+++ b/osgi.enroute.pom.distro/pom.xml
@@ -12,7 +12,7 @@
 	<version>2.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-
+	<description>OSGi enRoute Distro POM</description>
 
 
 	<build>
