Minor updates to pom

--- a/osgi.enroute.maven/osgi.enroute.pom.distro/pom.xml
+++ b/osgi.enroute.maven/osgi.enroute.pom.distro/pom.xml
@@ -521,6 +521,11 @@
 			<version>${enroute-version}</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.zookeeper</groupId>
+			<artifactId>zookeeper</artifactId>
+			<version>3.4.9</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
