--- a/examples/microservice/rest-app-jpa/pom.xml
+++ b/examples/microservice/rest-app-jpa/pom.xml
@@ -23,7 +23,7 @@
             <artifactId>rest-service</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
-        
+
         <!-- We choose the Apache Johnzon JSONP implementation, H2 and Hibernate 
             for our application -->
         <dependency>
@@ -32,18 +32,18 @@
             <version>1.1.0</version>
         </dependency>
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <version>1.4.196</version>
-            <scope>runtime</scope>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.4.1212</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-osgi</artifactId>
             <version>5.2.12.Final</version>
         </dependency>
-        
-        <!-- Needed by Hibernate, but not present as OSGi bundles in Hibernate's dependencies -->
+
+        <!-- Needed by Hibernate, but not present as OSGi bundles in Hibernate's 
+            dependencies -->
         <dependency>
             <groupId>org.apache.servicemix.bundles</groupId>
             <artifactId>org.apache.servicemix.bundles.antlr</artifactId>
