--- a/examples/microservice/rest-app-jpa/src/main/resources/OSGI-INF/configurator/configuration.json
+++ b/examples/microservice/rest-app-jpa/src/main/resources/OSGI-INF/configurator/configuration.json
@@ -8,8 +8,8 @@
     // Configure a JPA resource provider
     "org.apache.aries.tx.control.jpa.xa~microservice": {
            "name": "microservice.database",
-           "osgi.jdbc.driver.class": "org.h2.Driver",
-           "url": "jdbc:h2:./data/database",
+           "osgi.jdbc.driver.class": "org.postgresql.Driver",
+           "url": "jdbc:postgresql://localhost:5432/db",
            "osgi.unit.name": "microservice-dao" },
     
     // Target the Dao impls at the provider we configured
